# ai-requirements-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  demo.py  pyproject.toml  readme.md  readme.txt  repo_structure.txt  requirements.txt
data/raw/: REQ-0001.xml  REQ-0002.xml  REQ-0003.xml  REQ-0004.xml  REQ-0005.xml  REQ-0006.xml  REQ-0007.xml  REQ-0008.xml  REQ-0009.xml  REQ-0010.xml  REQ-0011.xml  REQ-0012.xml  REQ-0013.xml  REQ-0014.xml  REQ-0015.xml  REQ-0016.xml  REQ-0017.xml  REQ-0018.xml  REQ-0019.xml  REQ-0020.xml  REQ-0021.xml  REQ-0022.xml  REQ-0023.xml  REQ-0024.xml  REQ-0025.xml  REQ-0026.xml  REQ-0027.xml  REQ-0028.xml  REQ-0029.xml  REQ-0030.xml  REQ-0031.xml  REQ-0032.xml  REQ-0033.xml  REQ-0034.xml  REQ-0035.xml  REQ-0036.xml  REQ-0037.xml  REQ-0038.xml  REQ-0039.xml  REQ-0040.xml  (+2148 more)
docs/: architecture.md  repo_structure.txt
src/: run.py
src/api/: main.py
src/compliance/: disclosures.py
src/embedding/: embedder.py
src/embeddings/: vectorStore.py
src/evaluation/: llm_evaluator.py  requirement_encoder.py  retrieval_evaluator.py  run_evaluation.py  test_set_definition.py
src/lm_output/: LLMService.py
src/pipeline/: retrieval_pipeline.py  run.py
src/retrieval/: vector_Database.py  vector_Store.py
src/security/: query_Security.py
src/tests/: conftest.py
src/tests/api/: test_health.py  test_search.py
src/tests/embedding/: test_embedding.py
src/tests/retrieval/: test_retrieval.py
src/ui/: app.py
