[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-requirements-engine"
version = "0.1.0"
description = "AI-powered requirement search demonstrator"
requires-python = ">=3.11"

dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "anyio",
]

[tool.setuptools.packages.find]
where = ["src"]